# llm-2026-eval

./: .gitignore  README.md  git-setup.sh  pyproject.toml  vastai-setup_uv.sh
eval/: gsm8k-eval.py  math500-eval.py  pyproject.toml
eval/outputs/: gsm8k_eval_qwen3.5-9b.jsonl.summary.json  math500_Qwen3.5-9B-GPTQ-INT8.jsonl.summary.json  math500_Qwen3.5-9B.jsonl.summary.json
outputs/: math500_Qwen3.5-9B.jsonl.summary.json  math500_Qwen3.5-9B_fewshot.jsonl.summary.json  math_fewshot_examples.json  math_train_minus_math500.jsonl.summary.json
quantization/: quantize_qwen35_9b_gptq.py
scripts/: eval20251208.py  extract_math_fewshot_candidates.py  grpo-unsloth.py  gsm8k_result_confirm.sh  math-500.sh  math500-eval.py  mymath_verify.py  quantize_qwen35_9b_gptq.py  sample_math_fewshot_examples.py  sft-unsloth.py  sft-unsloth20251213.py
~/llm-2026-eval/: pyproject.toml
