[project]
name = "llm-eval"
version = "0.1.0"
description = "LLM Eval Pipeline"
requires-python = ">=3.10"

# 共通依存
dependencies = [
    "transformers>=4.58.0",
    "accelerate",
    "datasets",
    "peft",
    "optimum",
    "gptqmodel",
    "bitsandbytes",
    "sentencepiece",
    "evaluate",
    # wandb 0.22.3+ supports newer W&B API key formats and works with NumPy 2.x.
    "wandb==0.22.3",
    "tiktoken",
    "scikit-learn",
    "numpy",
    "einops",
    "setuptools",
    "sympy",
    "unsloth",
    "vllm",
]

# グループ依存（uv の新仕様）
[dependency-groups]
# 評価系（math-verify 等）
eval = [
]

# 開発用
dev = [
    "pytest",
    "ipykernel",
]
