[project]
name = "llm-eval"
version = "0.1.0"
description = "Separate evaluation environment for vLLM-based inference and verification"
requires-python = ">=3.10,<3.12"
dependencies = [
    "vllm",
    "transformers",
    "datasets",
    "sympy",
    "peft",
    "sentencepiece",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "ipykernel",
]
