[project]
name = "llm-eval"
version = "0.1.0"
description = "Separate evaluation environment for vLLM-based inference and verification"
requires-python = ">=3.10,<3.12"
dependencies = [
    "vllm==0.18.1",
    "transformers>=4.56,<5",
    "datasets",
    "sympy",
    "peft",
    "sentencepiece",
    "wandb",
]

[dependency-groups]
dev = [
    "ipykernel",
]

